[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
description = "Sudoku in CLI. Dataset is a subset of famous 3million sudoku csv https://www.kaggle.com/datasets/radcliffe/3-million-sudoku-puzzles-with-ratings?resource=download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"